force-app/main/default/objects/Escalacao__c/Escalacao__c.object-meta.xml
<CustomObject>
    <label>Escalação</label>
    <nameField>
        <displayFormat>ESC-{0000}</displayFormat>
        <label>Escalação Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>