force-app/main/default/objects/Escalacao__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Escalações</relationshipLabel>
    <relationshipName>Escala_es</relationshipName>
    <type>Lookup</type>
</CustomField>