force-app/main/default/objects/Escalacao__c/fields/Data_Escalacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Escalacao__c</fullName>
    <label>Data da Escalação</label>
    <type>DateTime</type>
</CustomField>